--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
   <title>Burnt Memes</title>
   <style>
     body {
-      background: linear-gradient(to right, #000000, #ffffff);
-      animation: background-gradient 10s ease infinite;
-    }
+        html,
+body {
+  width: 100%;
+  height: 100%;
+  background: repeating-conic-gradient(var(--bg1) 0% 25%, var(--bg2) 0% 50%) 50% /
+    10vw 10vw;
+  margin: 0;
+  padding: 0;
+  animation: BgDrift 4s linear infinite; /* FF be damned */
+}
 
-    @keyframes background-gradient {
-      0% {
-        background-position: 0% 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      100% {
-        background-position: 0% 50%;
-      }
-    }
+@keyframes BgDrift {
+  0% {
+    background-position: 0% 0%;
+  }
+  100% {
+    background-position: 10vw 10vw;
+  }
+}
 
     a {
       color: #ffffff;
@@ -34,7 +38,7 @@
 </head>
 <body>
   <h1 class="title">Select which Burnt Memes complation you would like to watch.</h1>
-
+<center>
   <ul>
     <li><a href="1.mp4">1</a></li>
     <li><a href="2.mp4">2</a></li>
@@ -43,5 +47,6 @@
     <li><a href="5.mp4">5</a></li>
     <li><a href="6.mp4">6</a></li>
   </ul>
+</center>
 </body>
 </html>
