--- a/index.html
+++ b/index.html
@@ -3,50 +3,76 @@
 <head>
   <title>Burnt Memes</title>
   <style>
-    body {
-        html,
-body {
-  width: 100%;
-  height: 100%;
-  background: repeating-conic-gradient(var(--bg1) 0% 25%, var(--bg2) 0% 50%) 50% /
-    10vw 10vw;
-  margin: 0;
-  padding: 0;
-  animation: BgDrift 4s linear infinite; /* FF be damned */
+html {
+  height:100%;
 }
 
-@keyframes BgDrift {
+body {
+  margin:0;
+}
+
+.bg {
+  animation:slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.5;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:-1;
+}
+
+.bg2 {
+  animation-direction:alternate-reverse;
+  animation-duration:4s;
+}
+
+.bg3 {
+  animation-duration:5s;
+}
+
+.content {
+  background-color:rgba(255,255,255,.8);
+  border-radius:.25em;
+  box-shadow:0 0 .25em rgba(0,0,0,.25);
+  box-sizing:border-box;
+  left:50%;
+  padding:10vmin;
+  position:fixed;
+  text-align:center;
+  top:50%;
+  transform:translate(-50%, -50%);
+}
+
+h1 {
+  font-family:monospace;
+}
+
+@keyframes slide {
   0% {
-    background-position: 0% 0%;
+    transform:translateX(-25%);
   }
   100% {
-    background-position: 10vw 10vw;
+    transform:translateX(25%);
   }
 }
-
-    a {
-      color: #ffffff;
-      text-decoration: none;
-      font-size: 20px;
-    }
-
-    .title {
-      text-align: center;
-      font-size: 30px;
-    }
   </style>
 </head>
 <body>
-  <h1 class="title">Select which Burnt Memes complation you would like to watch.</h1>
-<center>
-  <ul>
-    <li><a href="1.mp4">1</a></li>
-    <li><a href="2.mp4">2</a></li>
-    <li><a href="3.mp4">3</a></li>
-    <li><a href="4.mp4">4</a></li>
-    <li><a href="5.mp4">5</a></li>
-    <li><a href="6.mp4">6</a></li>
-  </ul>
-</center>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <div class="content">
+      <h1>Select which Burnt Memes you wish to watch.</h1>  
+      
+        <p><a href="1.mp4">I</a></p>
+        <p><a href="2.mp4">II</a></p>
+        <p><a href="3.mp4">III</a></p>
+        <p><a href="4.mp4">IV</a></p>
+        <p><a href="5.mp4">V</a></p>
+        <p><a href="6.mp4">VI</a></p>
+      
+    </div>
 </body>
 </html>
