--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ h1 {
         <p><a href="4.mp4">IV</a></p>
         <p><a href="5.mp4">V</a></p>
         <p><a href="6.mp4">VI</a></p>
+        <p><a href="7.mp4">VII</a></p>
       
     </div>
 </body>
