--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ h1 {
         <p><a href="5.mp4">V</a></p>
         <p><a href="6.mp4">VI</a></p>
         <p><a href="7.mp4">VII</a></p>
+        <p><a href="8.mp4">VIII</a></p>
       
     </div>
 </body>
